RESOLVED FIXED219656
TextManipulationController sometimes fails to notify its delegate of new text (if an element has been removed)
https://bugs.webkit.org/show_bug.cgi?id=219656
Summary TextManipulationController sometimes fails to notify its delegate of new text...
Geoffrey Garen
Reported 2020-12-08 14:26:05 PST
TextManipulationController sometimes fails to notify its delegate of new text (if an element has been removed)
Attachments
Patch (7.25 KB, patch)
2020-12-08 14:38 PST, Geoffrey Garen
wenson_hsieh: review+
Patch for landing (7.25 KB, patch)
2020-12-08 15:15 PST, Geoffrey Garen
ews-feeder: commit-queue-
Patch for landing (7.25 KB, patch)
2020-12-08 15:19 PST, Geoffrey Garen
no flags
Geoffrey Garen
Comment 1 2020-12-08 14:38:04 PST
Wenson Hsieh
Comment 2 2020-12-08 14:41:05 PST
Comment on attachment 415678 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415678&action=review r=mews > Source/WebCore/editing/TextManipulationController.cpp:646 > + if (!m_pendingItemsForCallback.size()) Nit - I think .isEmpty() might read a bit better here.
Geoffrey Garen
Comment 3 2020-12-08 15:15:14 PST
Created attachment 415681 [details] Patch for landing
EWS
Comment 4 2020-12-08 15:16:18 PST
ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!.
Geoffrey Garen
Comment 5 2020-12-08 15:19:46 PST
Created attachment 415682 [details] Patch for landing
EWS
Comment 6 2020-12-08 16:04:00 PST
Committed r270561: <https://trac.webkit.org/changeset/270561> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415682 [details].
Radar WebKit Bug Importer
Comment 7 2020-12-08 16:07:00 PST
Note You need to log in before you can comment on or make changes to this bug.