TextManipulationController sometimes fails to notify its delegate of new text (if an element has been removed) https://bugs.webkit.org/show_bug.cgi?id=219656

Reviewed by Wenson Hsieh.

Source/WebCore:

Sihui Liu  <sihui_liu@apple.com> diagnosed this; I typed the fix.

* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::scheduleObservationUpdate):

Ignore disconnected nodes. They are irrelevent to text manipulation in
the document (since they are not in the document); and including them
causes the common acenstor algorithm to fail.

Use an explicit boolean instead of a series of set checks to track
whether an update has already been scheduled. The set checks confused
me while debugging; also, checking a weak hash set for empty is
needlessly costly at O(n).

(WebCore::TextManipulationController::flushPendingItemsForCallback):
Ignore flushes when the list of pending items is empty. Otherwise, our
delegate will get a confusing 0-item callback.

* editing/TextManipulationController.h:

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TestWebKitAPI::TEST): Added a test that removes lots of elements. The
bug in this case depended on finding a removed element after an inserted
element in set iteration order. Using lots of removed elements gives us
a reasonable chance to trigger the relevant order.


Canonical link: https://commits.webkit.org/232232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270561 268f45cc-cd09-0410-ab3c-d52691b4dbfc