Tools/TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm
@@ -1108,6 +1108,49 @@ TEST(TextManipulation, StartTextManipulationAvoidCrashWhenExtractingOrphanedPosi
     TestWebKitAPI::Util::run(&done);
 }
 
+TEST(TextManipulation, RemovedElements)
+{
+    auto delegate = adoptNS([[TextManipulationDelegate alloc] init]);
+    auto webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 400, 400)]);
+    [webView _setTextManipulationDelegate:delegate.get()];
+
+    [webView synchronouslyLoadHTMLString:@"<p>hello world</p>"];
+
+    done = false;
+    [webView _startTextManipulationsWithConfiguration:nil completion:^{
+        done = true;
+    }];
+    TestWebKitAPI::Util::run(&done);
+
+    auto items = [delegate items];
+    EXPECT_EQ(items.count, 1UL);
+    EXPECT_EQ(items[0].tokens.count, 1UL);
+    EXPECT_WK_STREQ("hello world", items[0].tokens[0].content);
+
+    done = false;
+    delegate.get().itemCallback = ^(_WKTextManipulationItem *item) {
+        done = true;
+    };
+
+    [webView objectByEvaluatingJavaScript:@"(() => {"
+        "    for (let i = 0; i < 1024; ++i) {"
+        "        const objectElement = document.createElement('object');"
+        "        document.body.appendChild(objectElement);"
+        "        objectElement.remove();"
+        "    }"
+        "    const text = document.createTextNode('testing');"
+        "    const container = document.createElement('div');"
+        "    container.appendChild(text);"
+        "    document.body.appendChild(container);"
+        "})();"];
+
+    TestWebKitAPI::Util::run(&done);
+
+    EXPECT_EQ(items.count, 2UL);
+    EXPECT_EQ(items[1].tokens.count, 1UL);
+    EXPECT_WK_STREQ("testing", items[1].tokens[0].content);
+}
+
 TEST(TextManipulation, StartTextManipulationExtractsHeadingElementsAsSeparateItems)
 {
     auto delegate = adoptNS([[TextManipulationDelegate alloc] init]);
